# chromium-foldable

./: .gitignore  CHROMIUM_COMMIT  README.md  VERSION
build-config/: .gclient  args.gn
patches/: 0001-foldable-desktop-mobile-mode-switch.patch  0002-extensions-menu-folded-screen.patch  series
scripts/: apply-patches.sh  build.sh  create-patch.sh  fetch-chromium-retry.sh  fetch-chromium.sh  setup-depot-tools.sh  update-to-version.sh
